@@ -1,3 +1,6 @@
+2021-04-27 Markus Gans  <guru.mail@muenster.de>
+	* Code optimization at widget focus
+
 2021-04-24 Markus Gans  <guru.mail@muenster.de>
 	* Fixed mutex deadlock in FLogger
 
